Separating command of each layer

--- a/backend.yml
+++ b/backend.yml
@@ -25,8 +25,6 @@
         state: absent
       with_items:
         - /home/vagrant/microservice-app-example/frontend/
-        - /home/vagrant/microservice-app-example/log-message-processor/
-        - /home/vagrant/microservice-app-example/todos-api
 
     - name: Install Java jdk 8 
       apt: name=openjdk-8-jdk state=present
@@ -41,12 +39,25 @@
         classic: yes
         channel: 1.18/stable
 
-
+- name: Check if Node exists
+      stat:
+        path: "/usr/bin/node"
+      register: result2
 
     - name: Add nodejs apt key
       apt_key:
         url: https://deb.nodesource.com/gpgkey/nodesource.gpg.key
         state: present
+      when: not result2.stat.exists
+    
+    - name: Get nodejs
+      shell: sudo curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
+      when: not result2.stat.exists
+
+    - name: Install nodejs 
+      apt: 
+        name: nodejs
+        state: present 
 
     - name: Setup users-api
       shell: update-ca-certificates -f
@@ -54,3 +65,13 @@
       args:
         chdir: /home/vagrant/microservice-app-example/users-api/
         
+    - name: Setpup todos-api
+      shell: sudo npm install
+      args:
+        chdir: /home/vagrant/microservice-app-example/todos-api/
+
+    - name: Setpup log mesasage processor
+      shell: sudo pip3 install redis
+      shell: sudo pip3 install -r requirements.txt
+      args:
+        chdir: /home/vagrant/microservice-app-example/log-message-processor/
