--- a/backend.yml
+++ b/backend.yml
@@ -39,7 +39,7 @@
         classic: yes
         channel: 1.18/stable
 
-- name: Check if Node exists
+    - name: Check if Node exists
       stat:
         path: "/usr/bin/node"
       register: result2
@@ -59,6 +59,18 @@
         name: nodejs
         state: present 
 
+    - name: Repository Python
+      apt_repository:
+        repo: ppa:deadsnakes/ppa
+        state: present
+        update_cache: yes
+      
+    - name: Install python3.6
+      apt: name=python state=present
+
+    - name: Install Pip3
+      apt: name=python3-pip state=present
+      
     - name: Setup users-api
       shell: update-ca-certificates -f
       shell: ./mvnw clean install
