--- a/frontend.yml
+++ b/frontend.yml
@@ -44,6 +44,9 @@
       shell: sudo curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
       when: not result2.stat.exists
 
+    - name: Install Java jdk 8 
+      apt: name=openjdk-8-jdk state=present
+      
     - name: Install nodejs 
       apt: 
         name: nodejs
@@ -56,5 +59,5 @@
     
     - name: Setpup Frontend - Run npm build
       shell: sudo npm run build
-      args:
+      args: 
         chdir: /home/vagrant/microservice-app-example/frontend/
