--- a/frontend.yml
+++ b/frontend.yml
@@ -51,6 +51,10 @@
       apt: 
         name: nodejs
         state: present 
+    
+    # - name: install Zipkin
+    #   shell: curl -sSL https://zipkin.io/quickstart.sh | bash -s
+    #   shell: java -jar zipkin.jar &
 
     - name: Setpup Frontend - Run npm install
       shell: sudo npm install 
